# src/routes/orderRoutes.js
@@ -11,7 +11,19 @@ orderRouter.get("/:id",getOneOrderHandler );
 
 // orderRouter.get("/customer/:id",getOneOrderByCustomerHandler );
 
-orderRouter.post("/", createOrderHandler);
+orderRouter.post("/", createOrderHandler, 
+    /*  #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: "#/components/schemas/someSchema"
+                    }  
+                }
+            }
+        } 
+    */
+);
 
 orderRouter.put("/:id", updateOrderHandler);
 
